@@ -1,3 +1,4 @@
+ - Add silent logger
 0.3.8
  - Make sure dolfin-config is regenerated every time
  - Add demo program for cG(q) and dG(q)
